# AzaharXR

./: .gitignore  .gitmodules  AI-POLICY.md  CMakeLists.txt  README.md  license.txt
.ci/: android.sh  docker.sh  ios.sh  libretro-ci.yml  libretro-pack.sh  linux.sh  macos-universal.sh  macos.sh  mxe.sh  pack.sh  transifex.sh  windows.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: first_time_contributor_detect.yml  first_time_contributor_reopen.yml  libretro.yml
CMakeModules/: BundleTarget.cmake  DisablePaxMprotect.cmake  DownloadExternals.cmake  GenerateBuildInfo.cmake  GenerateSCMRev.cmake  GenerateSettingKeys.cmake
docker/azahar-room/: Dockerfile
src/: CMakeLists.txt
src/android/: .editorconfig  .gitignore  build.gradle.kts  gradle.properties
src/android/app/: build.gradle.kts
src/android/app/src/googlePlay/: AndroidManifest.xml
src/android/app/src/main/: AndroidManifest.xml
src/audio_core/: CMakeLists.txt
src/citra_cli/: CMakeLists.txt  citra_cli.cpp  citra_cli.h  compression_cli.cpp  compression_cli.h
src/citra_libretro/: CMakeLists.txt  citra_libretro.cpp  citra_libretro.h  core_settings.cpp  environment.cpp  environment.h  libretro_vk.cpp
src/citra_libretro/emu_window/: libretro_window.cpp  libretro_window.h
src/citra_libretro/input/: input_factory.cpp  input_factory.h  mouse_tracker.cpp  mouse_tracker.h
src/citra_meta/: CMakeLists.txt  common_strings.h  main.cpp
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  citra_qt.cpp  citra_qt.h  discord.h  discord_impl.cpp  discord_impl.h  game_list.cpp  game_list.h  game_list_p.h  game_list_worker.cpp  loading_screen.cpp  loading_screen.h  main.ui  notification_led.cpp  notification_led.h  setting_qkeys.h.in  uisettings.h
src/citra_qt/camera/: qt_camera_base.cpp
src/citra_qt/configuration/: config.cpp  config.h  configure_audio.cpp  configure_audio.h  configure_audio.ui  configure_camera.ui  configure_debug.cpp  configure_debug.ui  configure_enhancements.cpp  configure_enhancements.h  configure_enhancements.ui  configure_general.cpp  configure_general.ui  configure_graphics.cpp  configure_graphics.h  configure_graphics.ui  configure_layout.cpp  configure_layout.ui  configure_layout_cycle.cpp  configure_layout_cycle.h  configure_layout_cycle.ui  configure_motion_touch.cpp  configure_motion_touch.h  configure_motion_touch.ui  configure_storage.cpp  configure_storage.ui  configure_system.cpp  configure_system.ui  configure_ui.cpp  configure_web.cpp  configure_web.h
src/citra_qt/debugger/graphics/: graphics_tracing.cpp  graphics_vertex_shader.cpp
src/citra_qt/debugger/ipc/: recorder.cpp
src/citra_qt/multiplayer/: direct_connect.cpp  host_room.cpp  lobby.cpp
src/citra_qt/util/: metal_util.h  metal_util.mm
src/citra_room/: citra_room.cpp  citra_room.h
src/citra_room_standalone/: CMakeLists.txt  citra_room_standalone.cpp
src/common/: CMakeLists.txt  android_utils.cpp  android_utils.h  file_util.cpp  file_util.h  settings.cpp  settings.h
src/common/logging/: filter.cpp  types.h
src/core/: CMakeLists.txt  core.cpp  core.h  memory.cpp
src/core/arm/dyncom/: arm_dyncom_interpreter.cpp
src/core/arm/skyeye_common/: armstate.h
src/core/frontend/: emu_window.cpp
src/core/gdbstub/: gdbstub.cpp
src/core/hle/kernel/: process.cpp  process.h  svc.cpp  thread.cpp  thread.h
src/input_common/: CMakeLists.txt
src/installer/: citra.nsi
src/network/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/audio_core/hle/: hle.cpp
src/tests/common/: file_util.cpp
src/tests/core/memory/: memory.cpp  vm_manager.cpp
src/tests/video_core/: shader.cpp
src/video_core/: CMakeLists.txt  gpu.cpp  rasterizer_accelerated.cpp  rasterizer_accelerated.h  rasterizer_interface.h
src/video_core/pica/: pica_core.cpp
src/video_core/renderer_opengl/: gl_rasterizer.cpp  gl_texture_runtime.cpp  renderer_opengl.cpp
src/video_core/renderer_vulkan/: renderer_vulkan.cpp  vk_rasterizer.cpp
src/video_core/shader/generator/: glsl_shader_decompiler.cpp  glsl_shader_gen.cpp  shader_gen.cpp  shader_uniforms.h
src/web_service/: CMakeLists.txt
tools/: README.md  check-kotlin-formatting.sh  enter-docker-dev-container.sh  fix-kotlin-formatting.sh  verify-release.sh
(+208 files in other folders)
